Bug 1778333 - Accept codecs="Opus" in MP4 r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D156908